--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.package-validation-suite": "0.23.4-preview",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
