--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,8 +14,8 @@ concurrency:
 
 
 jobs:
-  check-links: 
-    runs-on: ["windows", "self-hosted"]
+  build-game: 
+    runs-on: ["windows-latest"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
