--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   build-game: 
-    runs-on: ["windows-latest"]
+    runs-on: ["windows-2019"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -27,3 +27,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: StandaloneWindows64
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Build
+          path: build
