--- a/.github/workflows/activation.yaml
+++ b/.github/workflows/activation.yaml
@@ -4,7 +4,7 @@ on:
 jobs:
   activation:
     name: Request manual activation file
-    runs-on: ["windows-2019"]
+    runs-on: ubuntu-latest
     steps:
       # Request manual activation file
       - name: Request manual activation file
