--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,11 +1,11 @@
 name: 'Natrio Build'
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
-  pull_request:
+#on:
+#  workflow_dispatch:
+#  push:
+#    branches:
+#      - main
+#  pull_request:
 
 
 concurrency:
